# Xt-Editor-Xt-Core

./: .clog.toml  .gitignore  .rustfmt.toml  .travis.yml  AUTHORS  Cargo.toml  Makefile  README.md  build.gradle  build.rs  flake.nix
.devcontainer/: devcontainer.json
.github/: CONTRIBUTING.md  ISSUE_TEMPLATE.md  dependabot.yml  stale.yml
doc/: IDEAS.md  TODO.md
doc/graphviz/: core-relations.dot  core-subsystem.dot
doc/markdown/: CONCEPTS.md  IDEAS.md
doc/sphinx/: Makefile  make.bat
doc/sphinx/source/: conf.py
docs/diagrams/: core-subsystem.dot
docs/markdown/: CONCEPTS.md  IDEAS.md
gradle/wrapper/: gradle-wrapper.properties
lib/xt_core/plugin/: Cargo.toml
lib/xt_core/plugin/src/: lib.rs
lib/xt_core/rpc/: Cargo.toml
lib/xt_core/rpc/src/: lib.rs
lib/xt_core/system/: Cargo.toml
lib/xt_core/system/src/: lib.rs
lib/xt_core/system/src/server/: buffer.rs  mod.rs  workspace.rs
lib/xt_core/system/src/server/modes/: major_mode.rs  minor_mode.rs
lib/xt_core/utils/: Cargo.toml
lib/xt_core/utils/src/: lib.rs
media/logos/ascii/: logo.txt
rust/: .clog.toml  .rustfmt.toml  Cargo.toml  Makefile
rust/core/daemon/: Cargo.toml
rust/core/daemon/src/: lib.rs
rust/core/lib/plugin/: Cargo.toml
rust/core/lib/rpc/: Cargo.toml
rust/core/lib/rpc/src/: lib.rs
rust/core/lib/system/: Cargo.toml
rust/core/lib/system/src/: lib.rs  logging.rs
rust/core/lib/system/src/server/: buffer.rs  mod.rs  workspace.rs
rust/core/lib/system/src/server/modes/: major_mode.rs  minor_mode.rs  mod.rs
rust/lib/xt_core/plugin/: Cargo.toml
rust/lib/xt_core/rpc/: Cargo.toml
rust/lib/xt_core/rpc/src/: lib.rs
rust/lib/xt_core/system/: Cargo.toml
rust/lib/xt_core/system/src/: lib.rs  logging.rs
rust/lib/xt_core/system/src/server/: buffer.rs  mod.rs  workspace.rs
rust/lib/xt_core/system/src/server/modes/: major_mode.rs  minor_mode.rs
rust/src/: lib.rs  logging.rs  utils.rs
rust/src/server/: buffer.rs  mod.rs  workspace.rs
rust/src/server/modes/: major_mode.rs  minor_mode.rs
script/: after_cibuild  bootstrap  cibuild  output_contributors  utils.sh
src/: lib.rs  logging.rs
src/lib/core/: Cargo.toml
src/lib/core/src/modes/: major_mode.rs
src/logging/: mod.rs
src/rpc/: conv.rs  mod.rs  models.rs
src/server/: buffer.rs  mod.rs  workspace.rs
src/server/modes/: major_mode.rs  minor_modes.rs  mod.rs
src/utils/: mod.rs  types.rs  uuid.rs
src/xt-core/: Cargo.toml
src/xt-core/src/: buffer.rs  lib.rs  logging.rs  workspace.rs
src/xt-core/src/modes/: major_mode.rs  minor_mode.rs  mod.rs
