[workspace]
members = [
   "bin/xt-cli",
   "bin/xt-daemon",
   "bin/xt-remote-daemon",
   "src/xt-core",
#   TBA.
#   "src/xt-rpc",
#   "src/xt-utils",
#   "src/xt-plugin",
]

[profile.dev]
opt-level = 3
codegen-units = 1
debug = true
lto = true
strip = false
incremental = false

[profile.dev.package."*"]
opt-level = 3
codegen-units = 1
debug = true
strip = false
incremental = false

[profile.release]
opt-level = 'z'
codegen-units = 1
debug = true
lto = true
strip = true
incremental = false

[profile.release.package."*"]
opt-level = 'z'
codegen-units = 1
debug = true
strip = true
incremental = false
