[workspace]
members = [
   "src/bin/client",
   "src/bin/remote-server",
   "src/bin/server",
   "src/lib/core",
]

[profile.dev]
opt-level = 3
codegen-units = 1
debug = true
lto = true
strip = false
incremental = false

[profile.dev.package."*"]
opt-level = 3
codegen-units = 1
debug = true
strip = false
incremental = false

[profile.release]
opt-level = 'z'
codegen-units = 1
debug = true
lto = true
strip = true
incremental = false

[profile.release.package."*"]
opt-level = 'z'
codegen-units = 1
debug = true
strip = true
incremental = false
