[package]
authors = ["Dom Rodriguez <shymega@shymega.org.uk>"]
description = "System module for Xt Core"
homepage = "https://github.com/xt-editor/xt-core"
keywords = ["text", "editor", "framework"]
categories = ["editor"]
name = "xt-core-system"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/xt-editor/xt-core.git"
version = "0.1.0"
edition = "2021"

[dependencies]
gapbuffer = "0.1.1"
slog-term = "2.9.0"
rmp = "0.8.11"
rmp-serde = "1.1.0"
serde = "1.0.137"
serde_derive = "1.0.137"

[dependencies.slog]
version = "2.7.0"
default-features = true
features = ["max_level_trace", "release_max_level_warn"]

[dependencies.uuid]
version = "1.0.0"
features = ["serde", "v4"]

[dependencies.clap]
features = ["suggestions", "color", "wrap_help"]
version = "3.1.18"
