[package]
authors = ["Dom Rodriguez <shymega@shymega.org.uk>"]
description = "System module for Xt Core"
homepage = "https://github.com/xt-editor/xt-core"
keywords = ["text", "editor", "framework"]
name = "xt-core-system"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/xt-editor/xt-core.git"
version = "0.1.0"

[lib]
name = "xt_core_system"
path = "src/lib.rs"

[dependencies]
gapbuffer = "0.1.1"
slog-term = "2.8.0"
slog-async = "2.6.0"

[dependencies.slog]
version = "2.7.0"
default-features = true
features = [
    "max_level_trace",
    "release_max_level_warn"
]

[dependencies.uuid]
version = "0.8.2"
features = [
    "serde",
    "v4"
]

[dependencies.xt-core-utils]
path = "../utils"
