[package]
authors = ["Dom Rodriguez <shymega@shymega.org.uk>"]
description = "RPC module for Xt Core"
homepage = "https://github.com/xt-editor/xt-core"
keywords = ["text", "editor", "framework"]
license = "GPL-3.0"
name= "xt-core-rpc"
readme = "README.md"
repository = "https://github.com/xt-editor/xt-core.git"
version = "0.1.0"

[lib]
name = "xt_core_rpc"
path = "src/lib.rs"

[dependencies]
slog-async = "2.4.0"
slog-term = "2.5.0"

[dependencies.xt-core-system]
path = "../system"

[dependencies.slog]
version = "2.5.2"
default-features = false
features = [
    "max_level_trace",
    "release_max_level_warn"
]

[dependencies.clippy]
version = "*"
optional = true
