[package]
authors = ["Dom Rodriguez <shymega@shymega.org.uk>"]
description = "System module for Xt Core"
homepage = "https://github.com/xt-editor/xt-core"
keywords = ["text", "editor", "framework"]
license = "GPL-3.0"
name = "xt-core-system"
readme = "README.md"
repository = "https://github.com/xt-editor/xt-core.git"
version = "0.1.0"

[lib]
name = "xt_core_system"
path = "src/lib.rs"

[dependencies]
gapbuffer = "0.1.1"
slog-async = "2.4.0"
slog-term = "2.5.0"

[dependencies.slog]
version = "2.5.2"
default-features = false
features = [
    "max_level_trace",
    "release_max_level_warn"
]

[dependencies.clippy]
version = "*"
optional = true

[dependencies.uuid]
version = "0.8.1"
features = [
    "serde",
    "v4"
]
